# rdns

./: .gitignore  Cargo.toml  Config.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
proto/: control.proto
src/: control.rs  dns.rs  main.rs  settings.rs
