[package]
name = "rdns"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
hickory-server = "0.24"
hickory-client = "0.24"
hickory-proto = "0.24"
async-trait = "0.1"
anyhow = "1.0.98"

[build-dependencies]
tonic-build = "0.11"
